--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "@babel/core": "^7.4.5",
     "@babel/plugin-proposal-class-properties": "^7.4.4",
+    "@babel/plugin-transform-runtime": "^7.4.4",
     "@babel/preset-env": "^7.4.5",
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.6",
@@ -31,12 +32,14 @@
     "webpack-dev-server": "^3.7.2"
   },
   "dependencies": {
+    "@babel/polyfill": "^7.4.4",
     "axios": "^0.18.0",
-    "redux": "^4.0.0",
-    "redux-promise": "^0.6.0",
     "react": "^16.8.6",
-    "react-redux": "^5.0.7",
     "react-dom": "^16.8.6",
-    "react-tradingview-widget": "^1.3.0"
+    "react-redux": "^5.0.7",
+    "react-tradingview-widget": "^1.3.0",
+    "redux": "^4.0.0",
+    "redux-thunk": "^2.3.0",
+    "redux-promise": "^0.6.0"
   }
 }
